Add files created during flexbox/media query demo sessions

--- a/index.html
+++ b/index.html
@@ -22,5 +22,57 @@
     <script src="assets/js/script.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <header class="main-header">
+      <h1>My flexbox demo</h1>
+      <nav>
+        <ul class="links">
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#my-work">My Work</a></li>
+          <li><a href="#contact">Contact Details</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="about-me" class="section-container">
+      <header><h2>About me</h2></header>
+      <div class="section-content-container">
+         <img src="https://placekitten.com/200/200" alt="a kitten" />
+         <p>This is an example of a website designed by a kitten</p>
+      </div>
+    </section>
+
+    <section id="my-work" class="section-container">
+      <header><h2>My Work</h2></header>
+      <div class="section-content-container">
+          <section class="project-card">
+            <h3>Main project</h3>
+            <img src="https://placedog.net/500/280" alt="a puppy doing a trick" />
+          </section>
+          <section class="project-card">
+            <h3>Project 2</h3>
+            <img src="https://placedog.net/600/400" alt="a puppy doing a trick" />
+          </section>
+          <section class="project-card">
+            <h3>Project 3</h3>
+            <img src="https://placedog.net/400/300" alt="a puppy doing a trick" />
+          </section>
+          <section class="project-card">
+            <h3>Project 4</h3>
+            <img src="https://placedog.net/500/600" alt="a puppy doing a trick" />
+          </section>
+          <section class="project-card">
+            <h3>Project 5</h3>
+            <img src="https://placedog.net/300/600" alt="a puppy doing a trick" />
+          </section>
+      </div>
+    </section>
+
+    <section id="contact" class="section-container">
+      <header><h2>Contact</h2></header>
+      <div class="section-content-container">
+  
+      </div>      
+    </section>
+  </body>
 </html>
